--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,15 +1,15 @@
-.md-card-avatar {
+.mat-card-avatar {
     height: 100px !important;
     width: 100px !important;
     border-radius: 50%;
     flex-shrink: 0;
 }
-.md-card {
+.mat-card {
     background-color: white !important;
     width: 35%;
     margin: 120px auto;
 }
-.md-input-container{
+.mat-form-field{
     /* width: 300px !important; */
     display: inline;
 }
