--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,27 @@
-<md-card align="center" class="md-card">
-  <md-card-title>
-    <img src="../assets/img.jpg" md-card-avatar class="md-card-avatar">
-  </md-card-title>
+<mat-card align="center" class="mat-card">
+  <mat-card-title>
+    <img src="../assets/img.jpg" mat-card-avatar class="mat-card-avatar">
+  </mat-card-title>
   <form [formGroup]="LoginForm" #loginform="ngForm" (submit)="Login()">
     <h3 class="title">Login</h3>
-    <md-card-content>
-        <md-input-container class="md-input-container">
-          <input mdInput placeholder="Email address" formControlName="email" required>
-          <md-error *ngIf="LoginForm.get('email').hasError('pattern')">
+    <mat-card-content>
+        <mat-form-field class="mat-form-field">
+          <input matInput placeholder="Email address" formControlName="email" required>
+          <mat-error *ngIf="LoginForm.get('email').hasError('pattern')">
             Please enter a valid email address
-          </md-error>
-          <md-error *ngIf="LoginForm.get('email').hasError('required')">
+          </mat-error>
+          <mat-error *ngIf="LoginForm.get('email').hasError('required')">
             Email is <strong>required</strong>
-          </md-error>
-        </md-input-container> <br>
-        <md-input-container class="md-input-container" required>
-          <input mdInput placeholder="Password" type="password" formControlName="password" required>
-          <md-error *ngIf="LoginForm.get('email').hasError('required')">
+          </mat-error>
+        </mat-form-field> <br>
+        <mat-form-field class="mat-form-field" required>
+          <input matInput placeholder="Password" type="password" formControlName="password" required>
+          <mat-error *ngIf="LoginForm.get('email').hasError('required')">
             Password is <strong>required</strong>
-          </md-error>
-        </md-input-container>
-    </md-card-content>
-    <button md-raised-button [disabled]="!loginform.form.valid">Login</button><br><br>
+          </mat-error>
+        </mat-form-field>
+    </mat-card-content>
+    <button mat-raised-button [disabled]="!loginform.form.valid">Login</button><br><br>
   </form>
   <span class="title"> Don't have an account? </span><br><a routerLink="/signup" class="title"> Signup Here </a>
-</md-card> 
+</mat-card> 
