--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -1,22 +1,22 @@
-.md-card-avatar {
+.mat-card-avatar {
     height: 100px !important;
     width: 100px !important;
     border-radius: 50%;
     flex-shrink: 0;
 }
-.md-card {
+.mat-card {
     background-color: white !important;
     width: 35%;
     margin: 120px auto;
 }
-.md-input-container{
+.mat-form-field{
     /* width: 300px !important; */
     display: inline;
 }
 .title{
     color: #33AEE6;
 }
-/* md-input-container.md-default-theme label, 
- md-input-container.md-default-theme .md-placeholder{
+/* mat-form-field.md-default-theme label, 
+ mat-form-field.md-default-theme .mat-placeholder{
     color:grey !important;
 } */
